--- a/ar-research.html
+++ b/ar-research.html
@@ -447,10 +447,14 @@
         </span>
       </p>
 
+      <br class="display-mobile">
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile" style="text-align: right; direction: rtl;">اهتمامات البحث</h3>
+
       <p style="text-align: right; direction: rtl;">
 
         <!-- <span class="display-mobile">تحياتي، أصدقائي من <span id="location2"></span>! </br></br></span> -->
-        <br class="display-mobile">
+        <!-- <br class="display-mobile"> -->
         من الأوساط الأكاديمية إلى الصناعة، بحثي مكرس لمجالات الطاقة النظيفة والفعالة والنقل الذكي منخفض الكربون، مع
         اهتمامات بحثية متعددة التخصصات تشمل:
 
