--- a/de-research.html
+++ b/de-research.html
@@ -434,6 +434,10 @@
           </span>
         </span>
 
+        <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">Forschungsinteressen</h3>
+
+
       <p align="justify">
 
         <!-- <span class="display-mobile">Grüße, Freunde aus <span id="location2"></span>! </br></br></span> -->
