--- a/en-research.html
+++ b/en-research.html
@@ -418,6 +418,9 @@
         </span>
       </p>
 
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">Research Interests</h3>
+
 
       <p align="justify">
 
@@ -510,8 +513,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Research Focus<small><small>「H2-Electricity Coupled Energy System for Power
-              Grid」</small></small>
+        <h3>Schematic Overview<small><small>「H2-Electricity Coupled Energy Grid System」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
