--- a/es-research.html
+++ b/es-research.html
@@ -438,6 +438,11 @@
         </span>
       </p>
 
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">Intereses de Investigación</h3>
+
+
+
       <p align="justify">
 
         <!-- <span class="display-mobile">¡Saludos, amigos de <span id="location2"></span>! </br></br></span> -->
