--- a/fr-research.html
+++ b/fr-research.html
@@ -451,6 +451,8 @@
         </span>
       </p>
 
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">Domaines de recherche</h3>
 
       <p align="justify">
 
