--- a/it-research.html
+++ b/it-research.html
@@ -444,6 +444,9 @@
         </span>
       </p>
 
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">Interessi di ricerca</h3>
+
       <p align="justify">
 
         <!-- <span class="display-mobile">Saluti, amici da <span id="location2"></span>! </br></br></span> -->
