--- a/jp-research.html
+++ b/jp-research.html
@@ -440,7 +440,7 @@
       </p>
       <div>
         <hr class="display-mobile" style="width:113%">
-        <h3 class="display-mobile">研究進捗</h3>
+        <h3 class="display-mobile">研究分野</h3>
         <p align="justify">
           学術界から産業界まで、<strong style="color: rgb(253, 93, 7);">クリーンで効率的なエネルギー</strong>と<strong
             style="color: rgb(253, 93, 7);">低炭素でインテリジェントな交通</strong>分野に注力し、分野横断的な<strong>研究関心</strong>を含む：
