--- a/kr-research.html
+++ b/kr-research.html
@@ -454,7 +454,8 @@
         </span>
       </p>
 
-      <p align="justify">
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">연구 진행</h3>
 
       <p align="justify">
         학계에서 산업계까지, 그는 <strong style="color: rgb(253, 93, 7);">깨끗하고 효율적인 에너지</strong>와 <strong
@@ -533,7 +534,7 @@
         </span>
       </div>
 
-      <!-- <hr class="display-mobile" style="width:113%"> -->
+      <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
