--- a/ru-activities.html
+++ b/ru-activities.html
@@ -285,7 +285,7 @@
             <li><a href="ru.html">Введение</span></a></li>
             <li><a href="ru-research.html">Исследования</a></li>
             <li><a href="ru-resume.html">Резюме</a></li>
-            <li><a href="ru-activities.html"><span style="color: rgb(253, 93, 7);">Действия ⏴</span></a></li>
+            <li><a href="ru-activities.html"><span style="color: rgb(253, 93, 7);">Занятия ⏴</span></a></li>
             <li><a href="#">&nbsp;• Pечь</a></li>
             <li><a href="#writing">&nbsp;• Hаписание</a></li>
             <li><a href="#visiting">&nbsp;• Посещение</a></li>
@@ -315,7 +315,7 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">ПРечь и хостинг<small><small><small></small></small> </small>
+      <h3 class="hidden-mobile">Занятия и хобби<small><small><small></small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_ru.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <select id="languages" name="languages"
@@ -376,7 +376,7 @@
             </div>
 
             <li><a href="ru-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Деятельность</strong></small></a></li>
+                  <strong>Занятия</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Выступления</small></a></li>
@@ -429,13 +429,21 @@
         </span>
       </p>
 
-      <hr class="display-mobile" style="width:113%">
 
-      <h3 class="display-mobile">ПРечь и хостинг<br></h3>
       <p align="justify">
+        <!-- <span class="display-mobile">Приветствую, друзья из <span id="location2"></span>! </br></br></span> -->
+        Я увлечённый путешественник и фотограф, который любит писать статьи, выступать с публичными речами и
+        поддерживать активный образ жизни, занимаясь различными видами спорта.
+      </p>
 
-        <strong>▸ Подведомственный Саммит по климату в Бонне ООН</strong> Ведущий/спикер на сессии "Энергетическая
-        трансформация и технологические инновации в Китае" (глобальная трансляция)
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <h3>ПРечь и хостинг<br></h3>
+
+      <strong>▸ Подведомственный Саммит по климату в Бонне ООН</strong> Ведущий/спикер на сессии "Энергетическая
+      трансформация и технологические инновации в Китае" (глобальная трансляция)
 
       <div class="video-container hidden-mobile">
         <video controls poster="images/Bonn_preview_cn.png">
