--- a/ru-research.html
+++ b/ru-research.html
@@ -288,7 +288,7 @@
             <li><a href="#presentations">&nbsp;• Конференции</a></li>
             <li><a href="#equity-research">&nbsp;• Aкционный анализ</a></li>
             <li><a href="ru-resume.html">Резюме</a></li>
-            <li><a href="ru-activities.html">Действия</a></li>
+            <li><a href="ru-activities.html">Занятия</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
             <p>____</p>
@@ -376,7 +376,7 @@
             </div>
 
             <li><a href="ru-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Деятельность</strong></small></a></li>
+                  <strong>Занятия</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Выступления</small></a></li>
@@ -428,6 +428,9 @@
           </span>
         </span>
       </p>
+
+      <hr class="display-mobile" style="width:113%">
+      <h3 class="display-mobile">Научные интересы</h3>
 
       <p align="justify">
         От <strong>академических</strong> кругов до <strong>промышленности</strong>, он посвящает себя областям <strong
