--- a/ru-resume.html
+++ b/ru-resume.html
@@ -288,7 +288,7 @@
             <li><a href="#academic-experience">&nbsp;• Академический</a></li>
             <li><a href="#industrial-experience">&nbsp;• Промышленный</a></li>
             <li><a href="#awards">&nbsp;• Награды</a></li>
-            <li><a href="ru-activities.html">Действия</a></li>
+            <li><a href="ru-activities.html">Занятия</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
             <p>____</p>
@@ -375,7 +375,7 @@
             </div>
 
             <li><a href="ru-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Деятельность</strong></small></a></li>
+                  <strong>Занятия</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Выступления</small></a></li>
