--- a/ru.html
+++ b/ru.html
@@ -285,7 +285,7 @@
             <li><a href="ru.html"><span style="color: rgb(253, 93, 7);">Введение ⏴</span></a></li>
             <li><a href="ru-research.html">Исследования</a></li>
             <li><a href="ru-resume.html">Резюме</a></li>
-            <li><a href="ru-activities.html">Действия</a></li>
+            <li><a href="ru-activities.html">Занятия</a></li>
             <li><a href="#contact">Контакт</a></li>
             <p>____</p>
             <!-- <li><a href="#services">Services</a></li> -->
@@ -442,7 +442,7 @@
             </div>
 
             <li><a href="ru-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Деятельность</strong></small></a></li>
+                  <strong>Занятия</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Выступления</small></a></li>
