--- a/fr-research.html
+++ b/fr-research.html
@@ -548,7 +548,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Schéma de recherche<small><small>「Système de réseau énergétique couplé
+        <h3>Schéma de recherche<small><small><br class="display-mobile">「Système de réseau énergétique couplé
               H2-Élec」</small></small>
         </h3>
         <br>
