--- a/it-research.html
+++ b/it-research.html
@@ -536,7 +536,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Schema di Ricerca<small><small>「Sistema di Rete Energetica Accoppiato Idrogeno-Elet」</small></small>
+        <h3>Schema di Ricerca<small><small><br class="display-mobile">「Sistema di Rete Energetica Accoppiato
+              Idrogeno-Elet」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
