--- a/kr-research.html
+++ b/kr-research.html
@@ -538,7 +538,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>연구 개요<small><small>「수소-전기 결합 에너지 그리드 시스템」</small></small>
+        <h3>연구 개요<small><small><br class="display-mobile">「수소-전기 결합 에너지 그리드 시스템」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
