--- a/cn-research.html
+++ b/cn-research.html
@@ -683,7 +683,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="cooperation">
-                <h3>研究概览 <small><small>「面向电网的氢-电协同低碳能源系统」</small></small></h3>
+                <h3>研究概览 <small><small><br class="display-mobile">「面向电网的氢-电协同低碳能源系统」</small></small></h3>
                 <br>
                 <img src="images/research_overview.png" style="width:100%;" alt="">
 
