--- a/de-research.html
+++ b/de-research.html
@@ -530,7 +530,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Forschungsschema<small><small>「Wasserstoff-Elektrizitäts-gekoppeltes Energiesystem」</small></small>
+        <h3>Forschungsschema<small><small><br class="display-mobile">「Wasserstoff-Elektrizitäts-gekoppeltes
+              Energiesystem」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
