--- a/en-research.html
+++ b/en-research.html
@@ -513,7 +513,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Schematic Overview<small><small>「H2-Electricity Coupled Energy Grid System」</small></small>
+        <h3>Schematic Overview<small><small><br class="display-mobile">「H2-Electricity Coupled Energy Grid
+              System」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
