--- a/es-research.html
+++ b/es-research.html
@@ -534,7 +534,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Descripción y Esquema<small><small>「Sistema de Red Energética Acoplada H₂-Elec」</small></small>
+        <h3>Descripción y Esquema<small><small><br class="display-mobile">「Sistema de Red Energética Acoplada
+              H₂-Elec」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
