--- a/jp-research.html
+++ b/jp-research.html
@@ -515,7 +515,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>研究概要<small><small>「水素-電気連携エネルギーグリッドシステム」</small></small>
+        <h3>研究概要<small><small><br class="display-mobile">「水素-電気連携エネルギーグリッドシステム」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
