--- a/ru-research.html
+++ b/ru-research.html
@@ -519,7 +519,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>Схема исследования<small><small>「Водородно-электрическая энергосистема」</small></small>
+        <h3>Схема исследования<small><small><br class="display-mobile">「Водородно-электрическая
+              энергосистема」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
