--- a/ar-activities.html
+++ b/ar-activities.html
@@ -304,10 +304,12 @@
             <li><a href="ar-research.html">الأبحاث</a></li>
             <li><a href="ar-resume.html">السيرة الذاتية</a></li>
             <li><a href="ar-activities.html"><span style="color: rgb(253, 93, 7);">الأنشطة ⏴</span></a></li>
-            <li><a href="#">&nbsp;• المشرف</a></li>
+            <li><a href="#">&nbsp;• خطابة</a></li>
             <li><a href="#writing">&nbsp;• الكتابة</a></li>
             <li><a href="#visiting">&nbsp;• الزيارة</a></li>
             <li><a href="#travel">&nbsp;• السفر</a></li>
+            <li><a href="#gallery">&nbsp;• الصور</a></li>
+            <li><a href="#sports">&nbsp;• الرياضة</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">اتصل بي</span></a></li>
             <p>____</p>
