--- a/ar-research.html
+++ b/ar-research.html
@@ -537,7 +537,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation" style="text-align: right; direction: rtl;">
-        <h3>المخطط البحثي<small><small>「نظام شبكة طاقة مقترن بالهيدروجين والكهرباء」</small></small>
+        <h3>المخطط البحثي<small><small><br class="display-mobile">「نظام شبكة طاقة مقترن بالهيدروجين
+              والكهرباء」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
