--- a/en-activities.html
+++ b/en-activities.html
@@ -316,6 +316,8 @@
             <li><a href="#writing">&nbsp;• Writing</a></li>
             <li><a href="#visiting">&nbsp;• Visiting</a></li>
             <li><a href="#travel">&nbsp;• Travelling</a></li>
+            <li><a href="#gallery">&nbsp;• Gallery</a></li>
+            <li><a href="#sports">&nbsp;• Sports</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
