--- a/fr-activities.html
+++ b/fr-activities.html
@@ -359,6 +359,8 @@
             <li><a href="#writing">&nbsp;• Écriture</a></li>
             <li><a href="#visiting">&nbsp;• Visite</a></li>
             <li><a href="#travel">&nbsp;• Voyager</a></li>
+            <li><a href="#gallery">&nbsp;• Galerie</a></li>
+            <li><a href="#sports">&nbsp;• Sports</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
@@ -459,6 +461,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• En voyage</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• La photographie</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="fr-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Des sports</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸
