--- a/it-activities.html
+++ b/it-activities.html
@@ -305,6 +305,8 @@
             <li><a href="#writing">&nbsp;• Scrittura</a></li>
             <li><a href="#visiting">&nbsp;• Visita</a></li>
             <li><a href="#travel">&nbsp;• Viaggiare</a></li>
+            <li><a href="#gallery">&nbsp;• Galleria</a></li>
+            <li><a href="#sports">&nbsp;• Sport</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contatto</span></a></li>
             <p>____</p>
@@ -403,6 +405,9 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Viaggiando</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografia</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sport</small></a></li>
+
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contattami</strong></small></a><br>
