--- a/jp-activities.html
+++ b/jp-activities.html
@@ -361,8 +361,9 @@
             <li><a href="#writing">&nbsp;• 執筆</a></li>
             <li><a href="#visiting">&nbsp;• 訪問</a></li>
             <li><a href="#travel">&nbsp;• 旅行</a></li>
+            <li><a href="#gallery">&nbsp;• 映像</a></li>
             <li><a href="#sports">&nbsp;• スポーツ</a></li>
-            <li><a href="https://photo.h-xu.com" target="_blank">&nbsp;• 撮影</a></li>
+
             <p>____</p>
             <li><a href="#contact"><span class='blue'>連絡先</span></a></li>
             <p>____</p>
@@ -453,7 +454,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 受賞</small></a></li>
             </div>
 
-            <li><a href="jp-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>活動</strong></small></a>
+            <li><a href="jp-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>趣味</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html"
@@ -466,6 +467,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 旅行</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 撮影</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• スポーツ</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>私に連絡して</strong></small></a><br></li>
