--- a/de-activities.html
+++ b/de-activities.html
@@ -340,10 +340,11 @@
             <li><a href="de-research.html">Forschung</a></li>
             <li><a href="de-resume.html">Lebenslauf</a></li>
             <li><a href="de-activities.html"><span style="color: rgb(253, 93, 7);">Aktivitäten ⏴</span></a></li>
-            <li><a href="#writing">&nbsp;• Moderator</a></li>
+            <li><a href="#">&nbsp;• Moderator</a></li>
             <li><a href="#writing">&nbsp;• Schreiben</a></li>
             <li><a href="#visiting">&nbsp;• Besuche</a></li>
             <li><a href="#travel">&nbsp;• Reisen</a></li>
+            <li><a href="#gallery">&nbsp;• Galerie</a></li>
             <li><a href="#sports">&nbsp;• Sportarten</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Kontakt</span></a></li>
@@ -443,6 +444,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Reisen</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografie</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Kontakt</strong></small></a><br>
