--- a/de-resume.html
+++ b/de-resume.html
@@ -396,6 +396,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Reisen</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografie</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Kontakt</strong></small></a><br>
