--- a/es-activities.html
+++ b/es-activities.html
@@ -345,6 +345,8 @@
             <li><a href="#writing">&nbsp;• Escritura</a></li>
             <li><a href="#visiting">&nbsp;• Visitando</a></li>
             <li><a href="#travel">&nbsp;• Viajar</a></li>
+            <li><a href="#gallery">&nbsp;• Galería</a></li>
+            <li><a href="#sports">&nbsp;• Deportes</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contacto</span></a></li>
             <p>____</p>
@@ -444,6 +446,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• El viajar</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografía</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Deportes</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contacto</strong></small></a><br>
