--- a/es-research.html
+++ b/es-research.html
@@ -397,6 +397,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• El viajar</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografía</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Deportes</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contacto</strong></small></a><br>
