--- a/fr-research.html
+++ b/fr-research.html
@@ -410,6 +410,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• En voyage</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• La photographie</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="fr-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Des sports</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸
