--- a/it.html
+++ b/it.html
@@ -468,6 +468,9 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Viaggiando</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografia</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sport</small></a></li>
+
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contattami</strong></small></a><br>
