--- a/jp-research.html
+++ b/jp-research.html
@@ -389,7 +389,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 受賞</small></a></li>
             </div>
 
-            <li><a href="jp-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>活動</strong></small></a>
+            <li><a href="jp-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>趣味</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html"
@@ -402,6 +402,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 旅行</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 撮影</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• スポーツ</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>私に連絡して</strong></small></a><br></li>
@@ -515,7 +517,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
-        <h3>研究概要<small><small><br class="display-mobile">「水素-電気連携エネルギーグリッドシステム」</small></small>
+        <h3>研究概要<small><small><br class="display-mobile">「水素-電気エネルギーグリッド」</small></small>
         </h3>
         <br>
         <img src="images/research_overview_en.jpg" style="width:100%;" alt="">
