--- a/kr-activities.html
+++ b/kr-activities.html
@@ -355,8 +355,9 @@
             <li><a href="#writing">&nbsp;• 글쓰기</a></li>
             <li><a href="#visiting">&nbsp;• 방문</a></li>
             <li><a href="#travel">&nbsp;• 여행</a></li>
+            <li><a href="#gallery">&nbsp;• 갤러리</a></li>
             <li><a href="#sports">&nbsp;• 스포츠</a></li>
-            <li><a href="https://photo.h-xu.com" target="_blank">&nbsp;• 사진</a></li>
+
 
             <p>____</p>
             <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
@@ -463,6 +464,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 여행</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 촬영</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="kr-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 스포츠</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br></li>
