--- a/kr.html
+++ b/kr.html
@@ -476,6 +476,10 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 여행</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 촬영</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="kr-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 스포츠</small></a></li>
+
+
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br></li>
