--- a/ru-activities.html
+++ b/ru-activities.html
@@ -290,8 +290,8 @@
             <li><a href="#writing">&nbsp;• Hаписание</a></li>
             <li><a href="#visiting">&nbsp;• Посещение</a></li>
             <li><a href="#travel">&nbsp;• Путешествие</a></li>
+            <li><a href="#gallery">&nbsp;• Фотография</a></li>
             <li><a href="#sports">&nbsp;• Спорт</a></li>
-            <li><a href="https://photo.h-xu.com" target="_blank">&nbsp;• Фотография</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
             <p>____</p>
@@ -388,6 +388,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Путешествия</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Фотография</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Спортивный</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
