--- a/ru.html
+++ b/ru.html
@@ -454,6 +454,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Путешествия</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html#photography"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Фотография</small></a></li>
+              <li style="width: 50%; box-sizing: border-box;"><a href="ru-activities.html#sports"
+                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Спортивный</small></a></li>
             </div>
 
             <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
