--- a/cn-resume.html
+++ b/cn-resume.html
@@ -520,13 +520,15 @@
             <div style="float: right"></div><br>
             <strong><a href="http://bjtu.edu.cn/" target="_blank">中国 · 北京交通大学</a></strong> (专利授权)<br>
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
+
             <p>____</p>
+
           <li>2023-2023 | <strong>高级管理教育, 绿色转型</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
           <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
             <div style="float: right"></div><br>
-            <strong><a href="https://quantic.edu/mba" target="_blank">美国 · 昆藤商学院</a></strong> (全奖/Fellow)<br></p>
+            <strong><a href="https://quantic.edu/mba" target="_blank">美国 · 昆藤商学院</a></strong> (全奖/Fellow)<br>
           <li>2018-2019 | <strong>交换生, 银行金融系</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://uzh.ch" target="_blank">瑞士 · 苏黎世大学</a></strong> (Swiss Mobility)<br>
@@ -584,6 +586,90 @@
         </div>
       </div>
 
+      <!-- <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section display-mobile" id="education-mobile">
+
+        <h3 style="display:inline-block">研究经历</h3>
+
+        <ul class="square">
+
+          <li>2016-2021 | <strong>博士研究员, 氢能 & 燃料电池 </strong>
+            <div style="float: right"></div><br>
+            <strong><a href="https://psi.ch/en" target="_blank">瑞士 · 保罗谢尔研究院</a></strong> (ETH联合体)
+          <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
+          <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br>
+          <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
+            <p>____</p>
+          <li>2023-2023 | <strong>访问学者, 能源经济与政策</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
+          </li>
+          <li>2022-2022 | <strong>海外/Fellow, 新能源/Start-up</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="https://uzh.ch" target="_blank">中国 · 奇绩创坛</a></strong> (北京/投研部)
+          </li>
+          <li>2019-2020 | <strong>行研实习生, 材料/能源/TMT</strong>
+            <div style="float: right"></div><br>
+            <strong><a href="https://quantic.edu/mba" target="_blank">中国 · 中信证券</a></strong> (北京/研究部)<br>
+          </li>
+        </ul>
+      </div>
+
+      <div class="doc-section hidden-mobile" id="education">
+        <h3 style="display:inline-block">研究经历</h3>
+        <div class="education-columns">
+
+          <div class="column-edu">
+            <div class="doc-section" id="education-2col">
+
+              <ul class="square">
+                <li>2016-2021 | <strong>博士研究员, 氢能 & 燃料电池 </strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="https://psi.ch/en" target="_blank">瑞士 · 保罗谢尔研究院</a></strong> (ETH联合体)
+                <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
+                <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br>
+                <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
+              </ul>
+            </div>
+          </div>
+
+          <div class="column-edu">
+            <div class="doc-section" id="education">
+              <ul class="square">
+                <li>2023-2023 | <strong>访问学者, 能源经济与政策</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
+                </li>
+                <li>2022-2022 | <strong>海外/Fellow, 新能源/Start-up</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="https://uzh.ch" target="_blank">中国 · 奇绩创坛</a></strong> (北京/投研部)
+                </li>
+                <li>2019-2020 | <strong>行研实习生, 材料/能源/TMT</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="https://quantic.edu/mba" target="_blank">中国 · 中信证券</a></strong> (北京/研究部)<br>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+ -->
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -602,7 +688,6 @@
           <li>2016-2021 | <strong>博士研究员, 氢能 & 燃料电池 </strong>
             <div style="float: right"></div><br>
             <strong><a href="https://psi.ch/en" target="_blank">瑞士 · 保罗谢尔研究院</a></strong> (ETH联合体)
-
           <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
@@ -625,16 +710,17 @@
       <div class="doc-section" id="academic-services">
         <h3>学术职能</h3>
         <ul class="square">
-          <!-- <li><strong>国际组织: </strong><br> -->
-          <!-- - <strong>联合国欧洲经济委员会-内陆运输-电动交通工作组</strong> 会议成员 (UNECE-ITC-E-MobilityTaskForce, 2024)<br> -->
-          <!-- - <strong>联合国欧洲经济委员会-可持续能源-氢能工作组</strong> 会议成员 (UNECE-CSE-H2TaskForce, 2024)<br>
-            - <strong>联合国波恩气候变化大会</strong> 青年代表/分会主持人/演讲人 (UNFCCC, 2023)<br>
-            - <strong>联合国欧洲经济委员会-内陆运输-气候变化影响评估及适应专家组</strong> 专家组成员 (UNECE-ITC-GE3, 2023)<br>
+          <li><strong>国际组织: </strong><br>
+            - <strong>联合国波恩气候变化大会: 分会主持人</strong>, 青年代表/演讲人 (UNFCCC, 2023-2024)<br>
+            - <strong>联合国欧洲经济委员会: 气候变化与陆上交通</strong> 专家组成员/内部咨询 (UNECE, 2023-2024)<br>
+            - <strong>联合国欧洲经济委员会: 可持续能源(氢能) </strong> 工作组会议成员 (UNECE, 2024)<br>
+            - <strong>联合国欧洲经济委员会: 电动交通</strong> 工作组会议成员 (UNECE, 2024)<br>
+
             <hr>
           <li><strong>智库/研究机构: </strong><br>
-            - <strong>英国牛津能源研究所</strong> 访问研究员 (Oxford Institute for Energy Studies, 2023-2024)<br>
+            <!-- - <strong>英国牛津能源研究所</strong> 访问研究员 (Oxford Institute for Energy Studies, 2023-2024)<br> -->
             - <strong>瑞士圣加仑国际经济论坛</strong> 学术评审 (St. Gallen Symposium, 2023-2024)<br>
-            <hr> -->
+            <hr>
           <li><strong>审稿人 (40+篇): </strong><br>
             - <strong>能源转换与管理杂志</strong> (Energy Conversion & Management, 影响因子: 11.2, 2021) <br>
             - <strong>应用能源杂志</strong> (Applied Energy, 影响因子: 11.4, 2022)<br>
@@ -642,6 +728,7 @@
             - <strong>可再生能源杂志</strong> (Renewable Energy, 影响因子: 9.0, 2023)<br>
             - <strong>能源战略评论</strong> (Energy Strategy Reviews, 影响因子: 8.3, 2023)<br>
             - <strong>国际氢能杂志</strong> (Int. J. Hydrogen Energy, 影响因子: 7.14, 2021)<br>
+            - <strong>交通政策</strong> (Transport Policy, 影响因子: 6.8, 2022) <br>
             - <strong>可持续发展能源杂志</strong> (Energy for Sus. Devel., 影响因子: 5.76, 2021) <br>
             - <strong>国际传热传质杂志</strong> (Int. J. Heat & Mass Transfer, 影响因子: 5.58, 2022) <br>
             - <strong>绿色科技与可持续发展杂志</strong> (Green Tech. and Sustainability, 新刊, 2022) <br>
