--- a/de-resume.html
+++ b/de-resume.html
@@ -523,6 +523,7 @@
             - <strong>Renewable Energy</strong> (IF: 9.0, 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (IF: 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (IF: 7.14, 2021)<br>
+            - <strong>Transport Policy</strong> (IF: 6.8, 2022)<br>
             - <strong>Energy for Sustainable Development</strong> (IF: 5.76, 2021)<br>
             - <strong>International Journal of Heat and Mass Transfer</strong> (IF: 5.58, 2022)<br>
             - <strong>Green Technology and Sustainability</strong> (Neue Zeitschrift, 2022)<br>
