--- a/es-resume.html
+++ b/es-resume.html
@@ -530,13 +530,14 @@
           <!-- <hr> -->
           <li><strong>Revisor (40+ artículos): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Factor de Impacto: 11.2, 2021)<br>
-            - <strong>Applied Energy</strong> (Factor de Impacto: 11.4, 2022)<br>
-            - <strong>Journal of Power Sources</strong> (Factor de Impacto: 9.13, 2022)<br>
-            - <strong>Renewable Energy</strong> (Factor de Impacto: 9.0, 2023)<br>
-            - <strong>Energy Strategy Reviews</strong> (Factor de Impacto: 8.3, 2023)<br>
-            - <strong>International Journal of Hydrogen Energy</strong> (Factor de Impacto: 7.14, 2021)<br>
-            - <strong>Energy for Sustainable Development</strong> (Factor de Impacto: 5.76, 2021)<br>
-            - <strong>International Journal of Heat and Mass Transfer</strong> (Factor de Impacto: 5.58, 2022)<br>
+            - <strong>Applied Energy</strong> (FI: 11.4, 2022)<br>
+            - <strong>Journal of Power Sources</strong> (FIo: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (FI: 9.0, 2023)<br>
+            - <strong>Energy Strategy Reviews</strong> (FI: 8.3, 2023)<br>
+            - <strong>International Journal of Hydrogen Energy</strong> (FI: 7.14, 2021)<br>
+            - <strong>Transport Policy</strong> (FI: 6.8, 2022)<br>
+            - <strong>Energy for Sustainable Development</strong> (FI: 5.76, 2021)<br>
+            - <strong>International Journal of Heat and Mass Transfer</strong> (FI: 5.58, 2022)<br>
             - <strong>Green Technology and Sustainability</strong> (Revista Nueva, 2022)<br>
             - <strong>Green Energy and Intelligent Transportation</strong> (Revista Nueva, 2022)<br>
             <hr>
