--- a/it-resume.html
+++ b/it-resume.html
@@ -540,13 +540,14 @@
             <hr> -->
           <li><strong>Revisore (40+ articoli): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Fattore di Impatto: 11.2, 2021)<br>
-            - <strong>Applied Energy</strong> (Fattore di Impatto: 11.4, 2022)<br>
-            - <strong>Journal of Power Sources</strong> (Fattore di Impatto: 9.13, 2022)<br>
-            - <strong>Renewable Energy</strong> (Fattore di Impatto: 9.0, 2023)<br>
-            - <strong>Energy Strategy Reviews</strong> (Fattore di Impatto: 8.3, 2023)<br>
-            - <strong>International Journal of Hydrogen Energy</strong> (Fattore di Impatto: 7.14, 2021)<br>
-            - <strong>Energy for Sustainable Development</strong> (Fattore di Impatto: 5.76, 2021)<br>
-            - <strong>International Journal of Heat and Mass Transfer</strong> (Fattore di Impatto: 5.58, 2022)<br>
+            - <strong>Applied Energy</strong> (FI: 11.4, 2022)<br>
+            - <strong>Journal of Power Sources</strong> (FI: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (FI: 9.0, 2023)<br>
+            - <strong>Energy Strategy Reviews</strong> (FI: 8.3, 2023)<br>
+            - <strong>International Journal of Hydrogen Energy</strong> (FI: 7.14, 2021)<br>
+            - <strong>Transport Policy</strong> (FI: 6.8, 2022)<br>
+            - <strong>Energy for Sustainable Development</strong> (FI: 5.76, 2021)<br>
+            - <strong>International Journal of Heat and Mass Transfer</strong> (FI: 5.58, 2022)<br>
             - <strong>Green Technology and Sustainability</strong> (Nuova Rivista, 2022)<br>
             - <strong>Green Energy and Intelligent Transportation</strong> (Nuova Rivista, 2022)<br>
             <hr>
