--- a/jp-resume.html
+++ b/jp-resume.html
@@ -546,6 +546,7 @@
             - <strong>再生可能エネルギー</strong> (Renewable Energy, IF: 9.0, 2023)<br>
             - <strong>エネルギー戦略レビュー</strong> (Energy Strategy Reviews, IF: 8.3, 2023)<br>
             - <strong>国際水素エネルギージャーナル</strong> (Int'l J. Hydrogen Energy, IF: 7.14, 2021)<br>
+            - <strong>交通政策</strong> (Transport Policy, IF: 6.8, 2022)<br>
             - <strong>持続可能な開発のためのエネルギー</strong> (Energy for Sustainable Development, IF: 5.76, 2021) <br>
             - <strong>国際熱と物質移動ジャーナル</strong> (Int'l J. Heat and Mass Transfer, IF: 5.58, 2022) <br>
             - <strong>グリーンテクノロジーと持続可能性</strong> (Green Tech & Sustainability, 新刊, 2022) <br>
