--- a/kr-resume.html
+++ b/kr-resume.html
@@ -608,6 +608,7 @@
             - <strong>재생 에너지</strong> (Renewable Energy, IF: 9.0, 2023)<br>
             - <strong>에너지 전략 리뷰</strong> (Energy Strategy Reviews, 영향력 지수: 8.3, 2023)<br>
             - <strong>국제 수소 에너지 저널</strong> (Int. J. Hydrogen Energy, 영향력 지수: 7.14, 2021)<br>
+            - <strong>교통 정책</strong> (Transport Policy, 영향력 지수: 6.8, 2022)<br>
             - <strong>지속 가능한 발전을 위한 에너지 저널</strong> (Energy for Sus. Devel., 영향력 지수: 5.76, 2021) <br>
             - <strong>국제 열 및 물질 전달 저널</strong> (Int. J. Heat & Mass Transfer, 영향력 지수: 5.58, 2022) <br>
             - <strong>녹색 기술 및 지속 가능성 저널</strong> (Green Tech. and Sustainability, 신규 저널, 2022) <br>
