--- a/ru-resume.html
+++ b/ru-resume.html
@@ -525,14 +525,15 @@
         <ul class="square">
           <li><strong>Рецензент (более 40 статей): </strong><br>
             - <strong>Журнал по энергетическому преобразованию и управлению</strong> (Energy Conversion & Management,
-            IF: 11.2, 2021)<br>
-            - <strong>Журнал Прикладная энергия</strong> (Applied Energy, IF: 11.4, 2022)<br>
-            - <strong>Журнал источников энергии</strong> (J. Power Sources, IF: 9.13, 2022)<br>
-            - <strong>Возобновляемая энергия</strong> (Renewable Energy, IF: 9.0, 2023)<br>
-            - <strong>Журнал Обзоры энергетической стратегии</strong> (Energy Strategy Reviews, IF: 8.3, 2023)<br>
-            - <strong>Международный журнал водородной энергетики</strong> (Int. J. Hydrogen Energy, IF: 7.14, 2021)<br>
-            - <strong>Журнал Энергия для устойчивого развития</strong> (Energy for Sus. Devel., IF: 5.76, 2021)<br>
-            - <strong>Международный журнал тепло- и массопереноса</strong> (Int. J. Heat & Mass Transfer, IF: 5.58,
+            Импа́кт-фа́ктор: 11.2, 2021)<br>
+            - <strong>Журнал Прикладная энергия</strong> (Applied Energy, ИФ: 11.4, 2022)<br>
+            - <strong>Журнал источников энергии</strong> (J. Power Sources, ИФ: 9.13, 2022)<br>
+            - <strong>Возобновляемая энергия</strong> (Renewable Energy, ИФ: 9.0, 2023)<br>
+            - <strong>Журнал Обзоры энергетической стратегии</strong> (Energy Strategy Reviews, ИФ: 8.3, 2023)<br>
+            - <strong>Международный журнал водородной энергетики</strong> (Int. J. Hydrogen Energy, ИФ: 7.14, 2021)<br>
+            - <strong>Транспортная политика</strong> (Transport Policy, ИФ: 6.8, 2022)<br>
+            - <strong>Журнал Энергия для устойчивого развития</strong> (Energy for Sus. Devel., ИФ: 5.76, 2021)<br>
+            - <strong>Международный журнал тепло- и массопереноса</strong> (Int. J. Heat & Mass Transfer, ИФ: 5.58,
             2022)<br>
             - <strong>Журнал Зеленые технологии и устойчивое развитие</strong> (Green Tech. and Sustainability, новый
             журнал, 2022)<br>
