--- a/ar-resume.html
+++ b/ar-resume.html
@@ -533,6 +533,7 @@
             - <strong>Renewable Energy</strong> (عامل التأثير: 9.03، 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (عامل التأثير: 8.3، 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (عامل التأثير: 7.14، 2021)<br>
+            - <strong>Transport Policy</strong> (عامل التأثير: 6.8، 2022)<br>
             - <strong>Energy for Sustainable Development</strong> (عامل التأثير: 5.76، 2021)<br>
             - <strong>International Journal of Heat and Mass Transfer</strong> (عامل التأثير: 5.58، 2022)<br>
             - <strong>Green Technology and Sustainability</strong> (مجلة جديدة، 2022)<br>
