--- a/en-resume.html
+++ b/en-resume.html
@@ -528,13 +528,14 @@
             <hr> -->
           <li><strong>Reviewer (40+ papers): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Impact Factor: 11.2, 2021)<br>
-            - <strong>Applied Energy</strong> (Impact Factor: 11.4, 2022)<br>
-            - <strong>Journal of Power Sources</strong> (Impact Factor: 9.13, 2022)<br>
-            - <strong>Renewable Energy</strong> (Impact Factor: 9.0, 2023)<br>
-            - <strong>Energy Strategy Reviews</strong> (Impact Factor: 8.3, 2023)<br>
-            - <strong>International Journal of Hydrogen Energy</strong> (Impact Factor: 7.14, 2021)<br>
-            - <strong>Energy for Sustainable Development</strong> (Impact Factor: 5.76, 2021)<br>
-            - <strong>International Journal of Heat and Mass Transfer</strong> (Impact Factor: 5.58, 2022)<br>
+            - <strong>Applied Energy</strong> (IF: 11.4, 2022)<br>
+            - <strong>Journal of Power Sources</strong> (IF: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (IF: 9.0, 2023)<br>
+            - <strong>Energy Strategy Reviews</strong> (IF: 8.3, 2023)<br>
+            - <strong>International Journal of Hydrogen Energy</strong> (IF: 7.14, 2021)<br>
+            - <strong>Transport Policy</strong> (IF: 6.8, 2022)<br>
+            - <strong>Energy for Sustainable Development</strong> (IF: 5.76, 2021)<br>
+            - <strong>International Journal of Heat and Mass Transfer</strong> (IF: 5.58, 2022)<br>
             - <strong>Green Technology and Sustainability</strong> (New Journal, 2022)<br>
             - <strong>Green Energy and Intelligent Transportation</strong> (New Journal, 2022)<br>
             <hr>
