--- a/fr-resume.html
+++ b/fr-resume.html
@@ -543,13 +543,14 @@
               <hr> -->
           <li><strong>Réviseur (40+ articles): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Facteur d'Impact : 11.2, 2021)<br>
-            - <strong>Applied Energy</strong> (Facteur d'Impact : 11.4, 2022)<br>
-            - <strong>Journal of Power Sources</strong> (Facteur d'Impact : 9.13, 2022)<br>
-            - <strong>Renewable Energy</strong> (Facteur d'Impact : 9.0, 2023)<br>
-            - <strong>Energy Strategy Reviews</strong> (Facteur d'Impact : 8.3, 2023)<br>
-            - <strong>International Journal of Hydrogen Energy</strong> (Facteur d'Impact : 7.14, 2021)<br>
-            - <strong>Energy for Sustainable Development</strong> (Facteur d'Impact : 5.76, 2021)<br>
-            - <strong>International Journal of Heat and Mass Transfer</strong> (Facteur d'Impact : 5.58, 2022)<br>
+            - <strong>Applied Energy</strong> (FI : 11.4, 2022)<br>
+            - <strong>Journal of Power Sources</strong> (FI : 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (FI : 9.0, 2023)<br>
+            - <strong>Energy Strategy Reviews</strong> (FI : 8.3, 2023)<br>
+            - <strong>International Journal of Hydrogen Energy</strong> (FI : 7.14, 2021)<br>
+            - <strong>Transport Policy</strong> (FI : 6.8, 2022)<br>
+            - <strong>Energy for Sustainable Development</strong> (FI : 5.76, 2021)<br>
+            - <strong>International Journal of Heat and Mass Transfer</strong> (FI : 5.58, 2022)<br>
             - <strong>Green Technology and Sustainability</strong> (Nouveau Journal, 2022)<br>
             - <strong>Green Energy and Intelligent Transportation</strong> (Nouveau Journal, 2022)<br>
             <hr>
