--- a/cn-resume.html
+++ b/cn-resume.html
@@ -586,10 +586,10 @@
         </div>
       </div>
 
-      <!-- <hr class="display-mobile" style="width:113%">
+      <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
-      <div class="doc-section display-mobile" id="education-mobile">
+      <div class="doc-section display-mobile" id="academic-experience-mobile">
 
         <h3 style="display:inline-block">研究经历</h3>
 
@@ -623,7 +623,7 @@
         </ul>
       </div>
 
-      <div class="doc-section hidden-mobile" id="education">
+      <div class="doc-section hidden-mobile" id="academic-experience">
         <h3 style="display:inline-block">研究经历</h3>
         <div class="education-columns">
 
@@ -654,7 +654,7 @@
                   <div style="float: right"></div><br>
                   <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
                 </li>
-                <li>2022-2022 | <strong>海外/Fellow, 新能源/Start-up</strong>
+                <li>2022-2022 | <strong>海外Fellow, 新能源/Start-up</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="https://uzh.ch" target="_blank">中国 · 奇绩创坛</a></strong> (北京/投研部)
                 </li>
@@ -668,9 +668,9 @@
           </div>
         </div>
       </div>
- -->
 
 
+      <!-- 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
@@ -701,7 +701,7 @@
         </ul>
       </div>
 
-
+ -->
 
 
       <hr class="display-mobile" style="width:113%">
@@ -710,16 +710,12 @@
       <div class="doc-section" id="academic-services">
         <h3>学术职能</h3>
         <ul class="square">
-          <li><strong>国际组织: </strong><br>
+          <li><strong>国际组织/智库: </strong><br>
             - <strong>联合国波恩气候变化大会: 分会主持人</strong>, 青年代表/演讲人 (UNFCCC, 2023-2024)<br>
             - <strong>联合国欧洲经济委员会: 气候变化与陆上交通</strong> 专家组成员/内部咨询 (UNECE, 2023-2024)<br>
+            - <strong>瑞士圣加仑国际经济论坛: </strong> 学术评审 (St. Gallen Symposium, 2023-2024)<br>
             - <strong>联合国欧洲经济委员会: 可持续能源(氢能) </strong> 工作组会议成员 (UNECE, 2024)<br>
             - <strong>联合国欧洲经济委员会: 电动交通</strong> 工作组会议成员 (UNECE, 2024)<br>
-
-            <hr>
-          <li><strong>智库/研究机构: </strong><br>
-            <!-- - <strong>英国牛津能源研究所</strong> 访问研究员 (Oxford Institute for Energy Studies, 2023-2024)<br> -->
-            - <strong>瑞士圣加仑国际经济论坛</strong> 学术评审 (St. Gallen Symposium, 2023-2024)<br>
             <hr>
           <li><strong>审稿人 (40+篇): </strong><br>
             - <strong>能源转换与管理杂志</strong> (Energy Conversion & Management, 影响因子: 11.2, 2021) <br>
