--- a/cn-resume.html
+++ b/cn-resume.html
@@ -637,9 +637,9 @@
                 <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
-                <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
+                  <!-- <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
                   <div style="float: right"></div><br>
-                  <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br>
+                  <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br> -->
                 <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
@@ -654,10 +654,10 @@
                   <div style="float: right"></div><br>
                   <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
                 </li>
-                <li>2022-2022 | <strong>海外Fellow, 新能源/Start-up</strong>
+                <!-- <li>2022-2022 | <strong>海外Fellow, 新能源/Start-up</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="https://uzh.ch" target="_blank">中国 · 奇绩创坛</a></strong> (北京/投研部)
-                </li>
+                </li> -->
                 <li>2019-2020 | <strong>行研实习生, 材料/能源/TMT</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="https://quantic.edu/mba" target="_blank">中国 · 中信证券</a></strong> (北京/研究部)<br>
